syntax = "proto3";

package dns;

option go_package = "./proto;dns";

service Dns {
	rpc Query(QueryRequest) returns (QueryResponse) {}
	rpc Whois(WhoisRequest) returns (WhoisResponse) {}
}

message Question {
	// name to query
	string name = 1;
	// type of record
	int32 type = 2;
}

message Answer {
	// name resolved
	string name = 1;
	// type of record
	int32 type = 2;
	// time to live
	int32 TTL = 3;
	// the answer
	string data = 4;
}

// Query an addresss
message QueryRequest {
	// name to resolve
	string name = 1;
	// type of query e.g A, AAAA, MX, SRV
	string type = 2;
}

message QueryResponse {
	int32 status = 1;
	bool TC = 2;
	bool RD = 3;
	bool RA = 4;
	bool AD = 5;
	bool CD = 6;
	repeated Question question = 7;
	repeated Answer answer = 8;
	string provider = 9;
}

message Domain {
	// domain id
	string id = 1;
}

// Check who owns a domain
message WhoisRequest {
	string domain = 1;
}

message WhoisResponse {
	// domain id
	string id = 1;
	// domain name
	string domain = 2;
	// whois server
	string whois_server = 3;
	// registrar
	string registrar_url = 4;
	// time of creation
	string created = 5;
	// time of update
	string updated = 6;
	// time of expiry
	string expiry = 7;
	// the registrar
	string registrar = 8;
	// the registrar iana id
	string registrar_id = 9;
	// abuse email
	string abuse_email = 10;
	// abuse phone
	string abuse_phone = 11;
	// status of domain
	repeated string status = 12;
	// nameservers
	repeated string nameservers = 13;
}
